demo/llamastack/llamastack-trustyai-fms/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: llamastack
  namespace: summit-connect-2025
spec:
  path: /
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: llamastack-trustyai-fms-service
    weight: 100
  wildcardPolicy: None
